Integrate with the `signature_generator.py` script (for widevine). This is a 3rd party file and will not be checked into source control CI (such as Jenkins) can copy the file into place before building.
Auditors: @darkdh, @bbondy

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ httpse.leveldb
 
 # sync bundle file should be built and copied from the brave/sync repo for now
 app/extensions/brave/content/scripts/sync.js
+
+# script used for signing for widevine
+signature_generator.py
